# tetris-cpp

./: CMakeLists.txt  README.md
data/: figures.txt  moviments.txt  out-of-bounds.txt  row-test.txt
highscores/: highscores.txt
resources/games/: partida.txt
src/: main.cpp
src/0. C++ Code/Graphic Lib/: sprites.cpp
src/0. C++ Code/Graphic Lib/NFont/: NFont.cpp
src/0. C++ Code/Logic Game/: GraphicManager.cpp  InfoJoc.h  main.cpp
src/2. Platforms/0. Windows Desktop/: MP_Practica.filters  MP_Practica.sln  MP_Practica.vcxproj  MP_Practica.vcxproj.filters
src/code/graphic-lib/: error.h  image_png.cpp  keyboard.h  keyboard_sdl.h  sound.cpp  sprites.h  video.h
src/code/graphic-lib/NFont/: NFont.h  NFont_gpu.h  SDL_FontCache.cpp  SDL_FontCache.h
src/code/logic/: Figura.cpp  GraphicManager.cpp  GraphicManager.h  Joc.cpp  Partida.cpp  Partida.h  Tauler.cpp  Tetris.cpp
src/code/logic/cpp/: Figura.cpp  GraphicManager.cpp  Joc.cpp  MovementNode.cpp  MovementQueue.cpp  Partida.cpp  Queue.cpp  ShapeNode.cpp  ShapeQueue.cpp  Tauler.cpp
src/code/logic/game-logic/: GraphicManager.cpp  Partida.cpp
src/code/logic/game-logic/headers/: GraphicManager.h  Joc.h  Partida.h  Tauler.h
src/code/logic/headers/: Figura.h  GraphicManager.h  InfoJoc.h  Joc.h  MovementNode.h  MovementQueue.h  Partida.h  Queue.h  ShapeNode.h  ShapeQueue.h  Tauler.h  Tetris.h
src/code/logic/util/headers/: MovementNode.h  ShapeNode.h
src/code/util/: MovementNode.cpp  MovementQueue.cpp  ShapeNode.cpp  ShapeQueue.cpp  Utilities.cpp
src/code/util/headers/: MovementNode.h  MovementQueue.h  ShapeNode.h  ShapeQueue.h  Utilities.h
src/data/: resultat_baixa_coloca_figura.txt  resultat_elimina_files_1.txt  resultat_elimina_files_2.txt  resultat_elimina_files_3.txt  resultat_elimina_files_4.txt  resultat_elimina_files_5.txt  resultat_elimina_files_6.txt  resultat_elimina_files_7.txt  resultat_esperat_baixa_figura.txt  resultat_esperat_elimina_files_1.txt  resultat_esperat_elimina_files_2.txt  resultat_esperat_elimina_files_3.txt  resultat_esperat_elimina_files_4.txt  resultat_esperat_elimina_files_5.txt  resultat_esperat_elimina_files_6.txt  resultat_esperat_elimina_files_7.txt  resultat_esperat_gir_figura_10.txt  resultat_esperat_gir_figura_11.txt  resultat_esperat_gir_figura_12.txt  resultat_esperat_gir_figura_13.txt  resultat_esperat_gir_figura_14.txt  resultat_esperat_gir_figura_15.txt  resultat_esperat_gir_figura_2.txt  resultat_esperat_gir_figura_3.txt  resultat_esperat_gir_figura_4.txt  resultat_esperat_gir_figura_6.txt  resultat_esperat_gir_figura_7.txt  resultat_esperat_gir_figura_8.txt  resultat_esperat_gir_figura_9.txt  resultat_esperat_inicialitzacio_gir.txt  resultat_esperat_inicialitzacio_tauler.txt  resultat_esperat_mou_figura_1.txt  resultat_esperat_mou_figura_2.txt  resultat_esperat_mou_figura_4.txt  resultat_esperat_mou_figura_6.txt  resultat_esperat_mou_figura_7.txt  resultat_esperat_mou_figura_8.txt  resultat_gir_figura_1.txt  resultat_gir_figura_10.txt  resultat_gir_figura_11.txt  (+47 more)
src/lib/cpp/: Figura.cpp  Joc.cpp  Tauler.cpp
src/lib/headers/: Figura.h  Joc.h  Tauler.h
